practice feature selection

--- a/MachineLearning/practice/1_feature_selection2.ipynb
+++ b/MachineLearning/practice/1_feature_selection2.ipynb
@@ -368,28 +368,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache C:\\Users\\proffl\\AppData\\Local\\Temp\\jieba.cache\n"
+      "Building prefix dict from the default dictionary ...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total counts:  1913\n"
+      "total counts:  2625\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading model cost 1.050 seconds.\n",
+      "Dumping model to file cache /var/folders/zz/8hl03_bd6sj_wrd8__z72r8r0000gn/T/jieba.cache\n",
+      "Loading model cost 1.337 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     },
@@ -397,15 +397,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "姊 蔡依林 日 晚间 出席 南韩 年度 盛事 舞台\n"
+      "台古 大战 强 棒球 阳岱 钢 阳岱 钢 中华队\n"
      ]
     }
    ],
    "source": [
     "from Python.nlp.nlp import *\n",
-    "stop_words = get_stop_words('././data/stop_words.txt', encoding='utf-8')\n",
+    "stop_words = get_stop_words('./data/stopwords.txt', encoding='gbk')\n",
     "\n",
-    "print(split_word(\"「呸姊」蔡依林2日晚间出席南韩年度盛事MAMA舞台\",\n",
+    "print(split_word(\"#台古大战 #12强 #棒球 #阳岱钢 阳岱钢 DAIKAN YOH #中华队\",\n",
     "                 stop_words, ['蔡依林', '叶明兰','叶镇中', '宋家豪', '白先勇','林智胜']))\n"
    ],
    "metadata": {
