--- a/MachineLearning/practice/案例1：自动机器学习.ipynb
+++ b/MachineLearning/practice/案例1：自动机器学习.ipynb
@@ -229,7 +229,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x,y,train_size=0.7, random_state=123)\n",
-    "tpot = TPOTRegressor(generations=1, population_size=50, verbosity=3, random_state=123)\n",
+    "tpot = TPOTRegressor(scoring='f1_weighted', generations=1, population_size=50, verbosity=3, random_state=123)\n",
     "tpot.fit(X_train, y_train)\n",
     "print(tpot.score(X_test, y_test))\n",
     "# tpot.export(r'C:\\Users\\Administrator\\Desktop\\tpot_iris_pipeline.py')"
