--- a/Python/pandas/pandas_100_solutions.ipynb
+++ b/Python/pandas/pandas_100_solutions.ipynb
@@ -434,7 +434,7 @@
    "metadata": {},
    "source": [
     "**22.** You have a DataFrame `df` with a column 'A' of integers. For example:\n",
-    "```python\n",
+    "```pyth=\n",
     "df = pd.DataFrame({'A': [1, 2, 2, 3, 4, 5, 5, 5, 6, 7, 7]})\n",
     "```\n",
     "\n",
