--- a/MachineLearning/practice/3_model_train.ipynb
+++ b/MachineLearning/practice/3_model_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "data = pd.read_csv(\"./data/features3_train_2.csv\")\n",
@@ -31,11 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "outputs": [],
    "source": [
+    "random_seed = 42\n",
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.25, random_state=42)"
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.25, random_state=random_seed)"
    ],
    "metadata": {
     "collapsed": false,
@@ -46,20 +47,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "0    19170\n1    19170\nName: VV, dtype: int64"
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from imblearn.over_sampling import SMOTE, BorderlineSMOTE\n",
-    "oversample = BorderlineSMOTE()\n",
+    "from imblearn.over_sampling import SMOTE, BorderlineSMOTE,SVMSMOTE\n",
+    "oversample = SVMSMOTE()\n",
     "X_over, y_over = oversample.fit_resample(X_train, y_train)\n",
     "y_over.value_counts()"
    ],
@@ -72,52 +73,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "model = RandomForestClassifier()\n",
-    "model.fit(X_over, y_over)\n",
-    "\n",
-    "y_train_pred = model.predict(X_over)\n",
-    "y_valid_pred = model.predict(X_valid)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.999973916899241\n",
-      "0.17435897435897435\n"
+      "0.9234571715455318\n",
+      "0.26140567200986436\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "model = RandomForestClassifier(n_estimators=50, min_samples_leaf=1000, random_state=42)\n",
+    "model.fit(X_over, y_over)\n",
+    "\n",
+    "y_train_pred = model.predict(X_over)\n",
+    "y_valid_pred = model.predict(X_valid)\n",
+    "\n",
     "from sklearn.metrics import f1_score\n",
     "print(f1_score(y_over, y_train_pred))\n",
     "print(f1_score(y_valid, y_valid_pred))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [10, 64, 118, 173, 227, 282, 336, 391, 445, 500], 'min_samples_split': [2, 5, 10], 'min_samples_leaf': [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "# Number of trees in random forest\n",
+    "n_estimators = [int(x) for x in np.linspace(start = 10, stop = 500, num = 10)]\n",
+    "# Minimum number of samples required to split a node\n",
+    "min_samples_split = [2, 5, 10]\n",
+    "# Minimum number of samples required at each leaf node\n",
+    "min_samples_leaf = [int(x) for x in np.linspace(start=100, stop=1000, num=10)]\n",
+    "# Create the random grid\n",
+    "random_grid = {'n_estimators': n_estimators,\n",
+    "               'min_samples_split': min_samples_split,\n",
+    "               'min_samples_leaf': min_samples_leaf}\n",
+    "print(random_grid)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 300 candidates, totalling 1500 fits\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "GridSearchCV(cv=5,\n             estimator=RandomForestClassifier(min_samples_leaf=1000,\n                                              n_estimators=50,\n                                              random_state=42),\n             n_jobs=-1,\n             param_grid={'min_samples_leaf': [100, 200, 300, 400, 500, 600, 700,\n                                              800, 900, 1000],\n                         'min_samples_split': [2, 5, 10],\n                         'n_estimators': [10, 64, 118, 173, 227, 282, 336, 391,\n                                          445, 500]},\n             scoring='f1_weighted', verbose=2)"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random search of parameters, using 3 fold cross validation,\n",
+    "# search across 100 different combinations, and use all available cores\n",
+    "rfc_gs = GridSearchCV(estimator = model, param_grid=random_grid, cv = 5, verbose=2, n_jobs = -1, scoring='f1_weighted',)\n",
+    "# Fit the random search model\n",
+    "rfc_gs.fit(X_over, y_over)"
    ],
    "metadata": {
     "collapsed": false,
@@ -390,6 +434,21 @@
    ],
    "source": [
     "lgb.get_params()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+    "# learning_rate, max_depth, l2_regularization, max_bins\n"
    ],
    "metadata": {
     "collapsed": false,
