gensim emotion analysis

--- a/MachineLearning/exam/cda.ipynb
+++ b/MachineLearning/exam/cda.ipynb
@@ -224,7 +224,7 @@
    "execution_count": 68,
    "outputs": [],
    "source": [
-    "result.to_csv(\"方笠_results.csv\", index=None)"
+    "result.to_csv(\"_results.csv\", index=None)"
    ],
    "metadata": {
     "collapsed": false,
