--- a/MachineLearning/exam/cda_tfidf.ipynb
+++ b/MachineLearning/exam/cda_tfidf.ipynb
@@ -106,10 +106,10 @@
    "outputs": [],
    "source": [
     "data['comment_text_sw'] = data['comment_text'].apply(\n",
-    "    # lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").split() if w.lower() not in stop_words]))\n",
-    "    lambda text: \" \".join([w for w in text.split()]))\n",
+    "    lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").split() if w.lower() not in stop_words]))\n",
+    "\n",
     "test['comment_text_sw'] = test['comment_text'].apply(\n",
-    "    lambda text: \" \".join([w for w in text.split()]))"
+    "    lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").split() if w.lower() not in stop_words]))"
    ],
    "metadata": {
     "collapsed": false,
@@ -627,6 +627,22 @@
   {
    "cell_type": "code",
    "execution_count": 64,
+   "outputs": [],
+   "source": [
+    "for y in ['toxic','severe_toxic','obscene','threat','insult','identity_hate']:\n",
+    "    result[y] = result[y].map({0:'L', 1:'H'})\n",
+    "result"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "result.to_csv(\"_results.csv\", index=None)"
