--- a/MachineLearning/exam/cda_gensim_prune.ipynb
+++ b/MachineLearning/exam/cda_gensim_prune.ipynb
@@ -298,7 +298,7 @@
    "source": [
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=8, num_leaves=200, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
@@ -322,7 +322,7 @@
     "X, y= rus.fit_resample(data_word2vec, data[y_columns[i]])\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=8, num_leaves=40, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
@@ -358,7 +358,7 @@
     "X, y= rus.fit_resample(data_word2vec, data[y_columns[i]])\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=10, num_leaves=80, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
@@ -382,7 +382,7 @@
     "X, y= rus.fit_resample(data_word2vec, data[y_columns[i]])\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=6, num_leaves=40, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
@@ -406,7 +406,7 @@
     "X, y= rus.fit_resample(data_word2vec, data[y_columns[i]])\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=7, num_leaves=40, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
@@ -430,7 +430,7 @@
     "X, y= rus.fit_resample(data_word2vec, data[y_columns[i]])\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=test_size, random_state=random_seed)\n",
     "lgb =LGBMClassifier(max_depth=7, num_leaves=40, boosting_type='dart', random_state=random_seed)\n",
-    "\n",
+    "lgb.fit(X_train, y_train)\n",
     "y_train_pred = lgb.predict(X_train)\n",
     "y_valid_pred = lgb.predict(X_valid)\n",
     "print(\"train set f1 score: \", f1_score(y_train, y_train_pred))\n",
