--- a/MachineLearning/exam/cda_tfidf.ipynb
+++ b/MachineLearning/exam/cda_tfidf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -17,14 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "                                            comment_text\n0                               (I'd probably vote Tory)\n1      \\n\\nAnother random member who doesn't even edi...\n2      Pretty ridiculous he? ) I actually trusted Fut...\n3      REDIRECT Talk:Wealthwood Township, Aitkin Coun...\n4      I guess it's a good removal.  Just so you know...\n...                                                  ...\n24359                                Yeah i no it sucks.\n24360  \\nThank you. Given the misuse of tools here an...\n24361  \\n\\n our previous conversation \\n\\nyou fucking...\n24362  \\n\\nHey listen don't you ever!!!! Delete my ed...\n24363  and i'm going to keep posting the stuff u dele...\n\n[24364 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>comment_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>(I'd probably vote Tory)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>\\n\\nAnother random member who doesn't even edi...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Pretty ridiculous he? ) I actually trusted Fut...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>REDIRECT Talk:Wealthwood Township, Aitkin Coun...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>I guess it's a good removal.  Just so you know...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>24359</th>\n      <td>Yeah i no it sucks.</td>\n    </tr>\n    <tr>\n      <th>24360</th>\n      <td>\\nThank you. Given the misuse of tools here an...</td>\n    </tr>\n    <tr>\n      <th>24361</th>\n      <td>\\n\\n our previous conversation \\n\\nyou fucking...</td>\n    </tr>\n    <tr>\n      <th>24362</th>\n      <td>\\n\\nHey listen don't you ever!!!! Delete my ed...</td>\n    </tr>\n    <tr>\n      <th>24363</th>\n      <td>and i'm going to keep posting the stuff u dele...</td>\n    </tr>\n  </tbody>\n</table>\n<p>24364 rows × 1 columns</p>\n</div>"
+      "text/plain": "                                            comment_text\n0      \\n\\nHBO content\\nthis article needs further re...\n1      My Rollback Request \\n\\nThanks for granting me...\n2      Oh dear - bad day at the office? Please confin...\n3             Your Edit to World Wrestling Entertainment\n4                                   Unblock 70.121.33.78\n...                                                  ...\n24359                                Yeah i no it sucks.\n24360  \\nThank you. Given the misuse of tools here an...\n24361  \\n\\n our previous conversation \\n\\nyou fucking...\n24362  \\n\\nHey listen don't you ever!!!! Delete my ed...\n24363  and i'm going to keep posting the stuff u dele...\n\n[24364 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>comment_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>\\n\\nHBO content\\nthis article needs further re...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>My Rollback Request \\n\\nThanks for granting me...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Oh dear - bad day at the office? Please confin...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Your Edit to World Wrestling Entertainment</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Unblock 70.121.33.78</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>24359</th>\n      <td>Yeah i no it sucks.</td>\n    </tr>\n    <tr>\n      <th>24360</th>\n      <td>\\nThank you. Given the misuse of tools here an...</td>\n    </tr>\n    <tr>\n      <th>24361</th>\n      <td>\\n\\n our previous conversation \\n\\nyou fucking...</td>\n    </tr>\n    <tr>\n      <th>24362</th>\n      <td>\\n\\nHey listen don't you ever!!!! Delete my ed...</td>\n    </tr>\n    <tr>\n      <th>24363</th>\n      <td>and i'm going to keep posting the stuff u dele...</td>\n    </tr>\n  </tbody>\n</table>\n<p>24364 rows × 1 columns</p>\n</div>"
      },
-     "execution_count": 2,
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": "                                            comment_text\n0      A false fight? It was still a planned fight fo...\n1      Internet Party and MANA Movement==\\nI have pro...\n2                                  Answer: I can't this.\n3      \\n\\nHe stated bottom two. Safe second is equiv...\n4      \\n\\nto PelasgicMoon>\\ntake it easy now. being ...\n...                                                  ...\n24359                                Yeah i no it sucks.\n24360  \\nThank you. Given the misuse of tools here an...\n24361  \\n\\n our previous conversation \\n\\nyou fucking...\n24362  \\n\\nHey listen don't you ever!!!! Delete my ed...\n24363  and i'm going to keep posting the stuff u dele...\n\n[24364 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>comment_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>A false fight? It was still a planned fight fo...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Internet Party and MANA Movement==\\nI have pro...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Answer: I can't this.</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>\\n\\nHe stated bottom two. Safe second is equiv...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>\\n\\nto PelasgicMoon&gt;\\ntake it easy now. being ...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>24359</th>\n      <td>Yeah i no it sucks.</td>\n    </tr>\n    <tr>\n      <th>24360</th>\n      <td>\\nThank you. Given the misuse of tools here an...</td>\n    </tr>\n    <tr>\n      <th>24361</th>\n      <td>\\n\\n our previous conversation \\n\\nyou fucking...</td>\n    </tr>\n    <tr>\n      <th>24362</th>\n      <td>\\n\\nHey listen don't you ever!!!! Delete my ed...</td>\n    </tr>\n    <tr>\n      <th>24363</th>\n      <td>and i'm going to keep posting the stuff u dele...</td>\n    </tr>\n  </tbody>\n</table>\n<p>24364 rows × 1 columns</p>\n</div>"
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def remove_strip(str):\n",
@@ -71,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +93,7 @@
      "data": {
       "text/plain": "233"
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
