--- a/MachineLearning/exam/cda_tfidf.ipynb
+++ b/MachineLearning/exam/cda_tfidf.ipynb
@@ -2,9 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -17,18 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                            comment_text\n0                               (I'd probably vote Tory)\n1      \\n\\nAnother random member who doesn't even edi...\n2      Pretty ridiculous he? ) I actually trusted Fut...\n3      REDIRECT Talk:Wealthwood Township, Aitkin Coun...\n4      I guess it's a good removal.  Just so you know...\n...                                                  ...\n24359                                Yeah i no it sucks.\n24360  \\nThank you. Given the misuse of tools here an...\n24361  \\n\\n our previous conversation \\n\\nyou fucking...\n24362  \\n\\nHey listen don't you ever!!!! Delete my ed...\n24363  and i'm going to keep posting the stuff u dele...\n\n[24364 rows x 1 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>comment_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>(I'd probably vote Tory)</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>\\n\\nAnother random member who doesn't even edi...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Pretty ridiculous he? ) I actually trusted Fut...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>REDIRECT Talk:Wealthwood Township, Aitkin Coun...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>I guess it's a good removal.  Just so you know...</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>24359</th>\n      <td>Yeah i no it sucks.</td>\n    </tr>\n    <tr>\n      <th>24360</th>\n      <td>\\nThank you. Given the misuse of tools here an...</td>\n    </tr>\n    <tr>\n      <th>24361</th>\n      <td>\\n\\n our previous conversation \\n\\nyou fucking...</td>\n    </tr>\n    <tr>\n      <th>24362</th>\n      <td>\\n\\nHey listen don't you ever!!!! Delete my ed...</td>\n    </tr>\n    <tr>\n      <th>24363</th>\n      <td>and i'm going to keep posting the stuff u dele...</td>\n    </tr>\n  </tbody>\n</table>\n<p>24364 rows × 1 columns</p>\n</div>"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "data_some =data[['comment_text', 'identity_hate']]\n",
@@ -39,13 +32,14 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def remove_strip(str):\n",
@@ -65,30 +59,15 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total counts:  233\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "233"
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "stop_words = get_stop_words(\"stopwords.txt\")\n",
     "len(stop_words)"
@@ -96,21 +75,34 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "data['comment_text_sw'] = data['comment_text'].apply(\n",
-    "    # lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").split() if w.lower() not in stop_words]))\n",
-    "    lambda text: \" \".join([w for w in text.split()]))\n",
+    "    lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").replace(\"?\", \"\").split() if w.lower() not in stop_words]))\n",
     "test['comment_text_sw'] = test['comment_text'].apply(\n",
-    "    lambda text: \" \".join([w for w in text.split()]))"
+    "    lambda text: \" \".join([w for w in text.replace(\",\", \"\").replace(\".\", \"\").replace(\"!\", \"\").replace(\"?\", \"\").split() if w.lower() not in stop_words]))"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
